--- a/android.html
+++ b/android.html
@@ -113,26 +113,32 @@
 
     <div class="container">
         <div class="container text-center">
-            <img src="image/Android_15.png" width="200px" alt="">
+            <img src="image/Android_16.png" width="200px" alt="">
             <h3>Android <iconify-icon icon="material-symbols:android" inline width="24" height="24"></iconify-icon></h3>
-            <h5>Versi Android Saat Ini : <a href="https://developer.android.com/about/versions/15" class="btn btn-sm btn-outline-success rounded-5">15</a></h5>
-            <h5>Kodename Android : Vanilla Ice Cream</h5>
+            <h5>Versi Android Saat Ini : <a href="https://developer.android.com/about/versions/16?hl=id" class="btn btn-sm btn-outline-success rounded-5">16</a></h5>
+            <h5>Kodename Android : Baklava</h5>
         </div>
         <div class="row text-center">
             <div class="col-md-4">
                 <h4>ROOT</h4>
-                <p><a href="https://github.com/topjohnwu/Magisk" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="simple-icons:magisk" width="15" height="15"></iconify-icon> Magisk</a> | <a href="https://github.com/tiann/KernelSU" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:kernelsu" width="15" height="15"></iconify-icon> KernelSU</a></p> <p><a href="https://github.com/bmax121/APatch" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:apatch" width="15" height="15"></iconify-icon> APatch</a></p>
+                <p><a href="https://github.com/topjohnwu/Magisk" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="simple-icons:magisk" width="15" height="15"></iconify-icon> Magisk</a> | <a href="https://github.com/tiann/KernelSU" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:kernelsu" width="15" height="15"></iconify-icon> KernelSU</a></p> 
+                
+                <p><a href="https://github.com/bmax121/APatch" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:apatch" width="15" height="15"></iconify-icon> APatch</a> | <a href="https://github.com/KernelSU-Next/KernelSU-Next/releases/" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:kernelsu" width="15" height="15"></iconify-icon> KernelSU Next</a></p>
             </div>
             <div class="col-md-4">
                 <h4>MODULE</h4> 
-                <p><a href="https://github.com/Dr-TSNG/ZygiskNext" class="btn btn-outline-dark rounded-5">ZygiskNext</a> | <a href="https://github.com/LSPosed/LSPosed.github.io/releases/" class="btn btn-outline-dark rounded-5">Shamiko</a></p>
-                <p> <a href="https://github.com/JingMatrix" class="btn btn-outline-dark rounded-5">LSPosed</a> | <a href="https://github.com/j-hc/zygisk-detach" class="btn btn-outline-dark rounded-5">Detach</a>
-                </p>
+                <p><a href="https://github.com/Dr-TSNG/ZygiskNext/releases/" class="btn btn-outline-dark rounded-5">ZygiskNext</a> | <a href="https://github.com/LSPosed/LSPosed.github.io/releases/" class="btn btn-outline-dark rounded-5">Shamiko</a></p>
+                <p> <a href="https://github.com/JingMatrix/LSPosed/releases/" class="btn btn-outline-dark rounded-5">LSPosed</a> | <a href="https://github.com/j-hc/zygisk-detach" class="btn btn-outline-dark rounded-5">Detach</a></p>
+                <p> <a href="https://github.com/chiteroman/PlayIntegrityFix/releases/" class="btn btn-outline-dark rounded-5">Play Integrity Fix</a> | <a href="https://github.com/sidex15/susfs4ksu-module/releases/" class="btn btn-outline-dark rounded-5">SUSFS</a></p>
+
             </div>
             <div class="col-md-4">
                 <h4>ROM</h4> 
-                <p><a class="btn btn-outline-dark rounded-5">xiaomi eu</a> | <a href="https://miuitn.vercel.app/" class="btn btn-outline-dark rounded-5">MIUI TN</a> 
+                <p><a class="btn btn-outline-dark rounded-5" href="https://xiaomi.eu">xiaomi eu</a> | <a href="https://miuitn.vercel.app/" class="btn btn-outline-dark rounded-5">MIUI TN</a> 
                 <br><small class="text-danger">* xiaomi eu hanya untuk varian snapdragon</small></p>
+                <p><a class="btn btn-outline-dark rounded-5" href="https://evolution-x.org/">EvolutionX</a> | <a class="btn btn-outline-dark rounded-5" href="https://pixelos.net/">PixelOS</a></p>
+                <p><a class="btn btn-outline-dark rounded-5" href="https://github.com/HorizonDroidLab">HorizonDroid</a> | <a class="btn btn-outline-dark rounded-5" href="https://www.projectmatrixx.org/">Matrixx</a></p>
+                <p><a class="btn btn-outline-dark rounded-5" href="https://crdroid.net/">crDroid</a> | <a class="btn btn-outline-dark rounded-5" href="https://lineageos.org/">LineageOS</a></p>
             </div>
         </div>
 
@@ -150,7 +156,7 @@
     <!-- Footer Start -->
     <footer class="p-2" id="footer">
         <div class="container mb-2 text-center">
-            <a href="https://instagram.com/flixpseal" id="footer-icon"
+            <a href="https://instagram.com/muhfhri._" id="footer-icon"
                 class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i
                     class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
