--- a/basicphp.html
+++ b/basicphp.html
@@ -180,9 +180,9 @@
   <!-- Footer Start -->
   <footer class="p-2 mt-2" id="footer">
     <div class="container mb-2 text-center">
-      <a href="https://instagram.com/flixpseal" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
+      <a href="https://instagram.com/muhfhri._" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
+      <a href="https://github.com/muhfhri" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-github"></i></a>
       <a href="https://twitter.com/flixpseal" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-twitter"></i></a>
@@ -207,7 +207,7 @@
           <br>Iconify
           <br>Font Awesome
           <br>Bootstrap 5
-          <br><a href="https://github.com/flixdz/flixpseal" class="text-muted link-none">More...</a>
+          <br><a href="https://github.com/muhfhri/-" class="text-muted link-none">More...</a>
         </div>
       </div>
     </div>
@@ -221,8 +221,9 @@
 
 
   <!-- Tombol ke atas -->
-  <button type="button" class="btn btn-primary btn-floating rounded-5" id="btn-back-to-top"><iconify-icon inline
-      icon="grommet-icons:up"></iconify-icon></button>
+  <button type="button" class="btn btn-m3-you-color bg-material btn-floating rounded-4 shadow btn-lg"
+        id="btn-back-to-top"><iconify-icon inline icon="line-md:chevron-up"></iconify-icon>
+    </button>
   <!--JAVA SCRIPT FOR AOS-->
   <script>
     AOS.init();
