--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <small class="fw-bold fira-code text-danger">*try to be a dev, cuz being a dev is really hard af</small>
 
                     <div class="text-center mt-2" data-aos="fade-in">
-                        <a href="https://instagram.com/flixpseal" class="btn btn-outline-m3-you-color rounded-5"><i
+                        <a href="https://instagram.com/muhfhri._" class="btn btn-outline-m3-you-color rounded-5"><i
                                 class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=100044505125193"
                             class="btn btn-outline-m3-you-color rounded-5"><i class="fa-brands fa-facebook"></i></a>
@@ -157,9 +157,9 @@
     <div id="website" class="page">
         <div class="container mt-3" data-aos="fade-in">
             <h3 class="manrope text-center fw-bold"><iconify-icon inline icon="svg-spinners:blocks-shuffle-3" width="24" height="24"></iconify-icon> <a class="fw-bold link-none clickable" href="#pendidikan"
-                    id="pendidikan">Framework Used</a></h3>
+                    id="pendidikan">Framework & Code Editor</a></h3>
             <div class="container text-center">
-                <small class="manrope fw-bold">All framework are Open-Source and free to use</small>
+                <small class="manrope fw-bold">* All framework are Open-Source and free to use</small>
                 <h4 class="mt-3">Bootstrap 5 <sup class="manrope rounded-2 btn-outline-m3-you-color">&nbsp;<iconify-icon
                             inline icon="carbon:fork"></iconify-icon>main&nbsp;</sup> <a href="https://getbootstrap.com"
                         class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon inline
@@ -171,10 +171,12 @@
                         href="https://michalsnik.github.io/aos/"
                         class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon inline
                             icon="pajamas:scroll-down"></iconify-icon></a></h4>
-                <h4>Acode FOSS <sup class="manrope rounded-2 bg-success">&nbsp;editor text&nbsp;</sup> <a
+                <h4>VS Code <a
+                        href="https://code.visualstudio.com/"
+                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon icon="uim:visual-studio" inline></iconify-icon></a></h4>
+                <h4>Acode <a
                         href="https://play.google.com/store/apps/details?id=com.foxdebug.acode"
-                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon inline
-                            icon="streamline:play-store"></iconify-icon></a></h4>
+                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon icon="arcticons:acode" inline></iconify-icon></a></h4>
 
                 <a class="btn btn-outline-dark rounded-5 geist-mono position-relative" data-bs-toggle="collapse"
                     href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -277,7 +279,7 @@
     <!-- Footer Start -->
     <footer class="p-2" id="footer">
         <div class="container mb-2 text-center">
-            <a href="https://instagram.com/flixpseal" id="footer-icon"
+            <a href="https://instagram.com/muhfhri._" id="footer-icon"
                 class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i
                     class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
