--- a/windows.html
+++ b/windows.html
@@ -199,9 +199,9 @@
   <!-- Footer Start -->
   <footer class="p-2" id="footer">
     <div class="container mb-2 text-center">
-      <a href="https://instagram.com/flixpseal" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
+      <a href="https://instagram.com/muhfhri._" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
+      <a href="https://github.com/muhfhri" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.tiktok.com/@flixpseal" id="footer-icon"
         class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i class="fa-brands fa-tiktok"></i></a>
@@ -244,7 +244,7 @@
           <br>Iconify
           <br>Font Awesome
           <br>Bootstrap 5
-          <br><a href="https://github.com/flixdz/flixpseal" class="text-muted link-none">More...</a>
+          <br><a href="https://github.com/muhfhri/-" class="text-muted link-none">More...</a>
         </div>
       </div>
     </div>
@@ -264,18 +264,7 @@
 
   <!-- JavaScript for functional features this cool website-->
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const dotAnimation = document.getElementById("dot-animation");
-      let dots = 0;
-
-      setInterval(function () {
-        dots = (dots + 1) % 4;
-        dotAnimation.textContent = "Updates" + ".".repeat(dots);
-      }, 1000);
-    });
-
-  </script>
+  
   <script>
     setInterval(() => {
       var date = new Date();
