--- a/android.html
+++ b/android.html
@@ -117,8 +117,24 @@
             <h3>Android <iconify-icon icon="material-symbols:android" inline width="24" height="24"></iconify-icon></h3>
             <h5>Versi Android Saat Ini : <a href="https://developer.android.com/about/versions/16?hl=id" class="btn btn-sm btn-outline-success rounded-5">16</a></h5>
             <h5>Kodename Android : Baklava</h5>
+            <a class="btn btn-outline-dark rounded-5 geist-mono position-relative" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                <iconify-icon icon="lineicons:phone" inline></iconify-icon> Spek Hp Sendiri</a>
+
+            <div class="collapse" id="collapseExample">
+                <center>
+                    <div class="card w-50 card-body rounded-5 mt-2">
+                        <center><img src="https://images-cdn.ubuy.co.id/6351ac4f756a6050cf4cc623-poco-f3-5g-4g-volte-unlocked-global.jpg" width="100px" alt="" class="rounded-3"></center>
+                    <h2 class="fw-bold">POCO F3</h2>
+                    <h5 class="google-sans">Snapdragon 870 5G</h5>
+                    <h5>4520mAh</h5>
+                    <h5 class="manrope">128 GB / 6 GB</h5>
+                    <h5>UFS 3.1 / LPDDR5 2700mhz</h5>
+                    <h5>AnTuTu 920.000</h5>
+                </div>
+            </center>
+            </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center mt-2">
             <div class="col-md-4">
                 <h4>ROOT</h4>
                 <p><a href="https://github.com/topjohnwu/Magisk" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="simple-icons:magisk" width="15" height="15"></iconify-icon> Magisk</a> | <a href="https://github.com/tiann/KernelSU" class="btn btn-outline-dark rounded-5"><iconify-icon inline icon="arcticons:kernelsu" width="15" height="15"></iconify-icon> KernelSU</a></p> 
