--- a/ramadhan.html
+++ b/ramadhan.html
@@ -12,6 +12,7 @@
     <link href="css/nav.css" rel="stylesheet">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     <script src="js/webver.js"></script>
+    <script src="js/theme.js"></script>
     <!-- AOS PLUGIN -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
