--- a/basic.html
+++ b/basic.html
@@ -26,6 +26,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
   <script src="js/webver.js"></script>
+  <script src="js/theme.js"></script>
   <link rel="stylesheet" href="css/multilevel.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
