--- a/format-text.html
+++ b/format-text.html
@@ -25,7 +25,7 @@
   <script src="js/webver.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
-
+  <script src="js/theme.js"></script>
   <link rel="stylesheet" href="css/dark-mode.css">
   <link rel="stylesheet" href="css/multilevel.css">
   <style>
