--- a/windows.html
+++ b/windows.html
@@ -31,8 +31,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
   <script src="js/webver.js"></script>
+  <script src="js/theme.js"></script>
   <link rel="stylesheet" href="css/dark-mode.css">
   <link rel="stylesheet" href="css/multilevel.css">
+  <script>
+    (function() {
+      var darkThemeSelected = localStorage.getItem("darkSwitch") === "dark";
+      if (darkThemeSelected) {
+        document.documentElement.setAttribute("data-theme", "dark");
+      }
+    })();
+  </script>
   <style>
     .carousel-item img {
       width: 360px !important;
@@ -263,46 +272,6 @@
   <!-- End Of Body HTML -->
 
   <!-- JavaScript for functional features this cool website-->
-
-  
-  <script>
-    setInterval(() => {
-      var date = new Date();
-      var tahun = date.getFullYear();
-      var bulan = date.getMonth();
-      var tanggal = date.getDate();
-      var hari = date.getDay();
-      var jam = date.getHours();
-      var menit = date.getMinutes();
-      var detik = date.getSeconds();
-      switch (hari) {
-        case 0: hari = "Minggu"; break;
-        case 1: hari = "Senin"; break;
-        case 2: hari = "Selasa"; break;
-        case 3: hari = "Rabu"; break;
-        case 4: hari = "Kamis"; break;
-        case 5: hari = "Jum'at"; break;
-        case 6: hari = "Sabtu"; break;
-      }
-      switch (bulan) {
-        case 0: bulan = "Januari"; break;
-        case 1: bulan = "Februari"; break;
-        case 2: bulan = "Maret"; break;
-        case 3: bulan = "April"; break;
-        case 4: bulan = "Mei"; break;
-        case 5: bulan = "Juni"; break;
-        case 6: bulan = "Juli"; break;
-        case 7: bulan = "Agustus"; break;
-        case 8: bulan = "September"; break;
-        case 9: bulan = "Oktober"; break;
-        case 10: bulan = "November"; break;
-        case 11: bulan = "Desember"; break;
-      }
-      var tampilTanggal = hari + ", " + tanggal + " " + bulan + " " + tahun;
-
-      document.getElementById("tampil").innerHTML = tampilTanggal;
-    }, 1000);
-  </script>
 
   <script>
     const apiKey = '962322a87800402e0b9d7052cb5e8f16';
