--- a/format-text.html
+++ b/format-text.html
@@ -50,7 +50,7 @@
 <body>
   <nav class="navbar navbar-expand-lg" id="NavBar">
     <div class="container-fluid">
-      <a href="#"><img class="navbar-brand" src="image/flixdz.png" width="80"></a>
+      <a href="#"><img class="navbar-brand" id="light" width="100"></a>
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
