--- a/windows.html
+++ b/windows.html
@@ -77,60 +77,31 @@
 
 <body>
   <nav class="navbar bg-light navbar-expand-lg sticky-top" id="NavBar">
-    <div class="container-fluid">
-      <a href="#"><img class="navbar-brand" id="light" width="100"></a>
-      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="icon-bar top-bar"></span>
-        <span class="icon-bar middle-bar"></span>
-        <span class="icon-bar bottom-bar"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav text-center">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Beranda</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-              id="navbarDropdownMenuLink">
-              Belajar Web
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li class="dropdown-submenu text-center">
-                <a class="dropdown-item dropdown-toggle" href="#"><iconify-icon inline
-                    icon="icomoon-free:html-five"></iconify-icon> HTML 5</a>
-                <ul class="dropdown-menu text-center">
-                  <li><a class="dropdown-item" href="basic.html">Basic HTML</a></li>
-                  <li><a class="dropdown-item" href="format-text.html">Format Text</a></li>
+        <div class="container-fluid">
+            <a href="#"><img class="navbar-brand" id="light" width="100"></a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="icon-bar top-bar"></span>
+                <span class="icon-bar middle-bar"></span>
+                <span class="icon-bar bottom-bar"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav text-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://github.com/muhfhri"><iconify-icon
+                                inline icon="line-md:github-loop"></iconify-icon> GitHub</a>
+                    </li>
                 </ul>
-
-              <li class="dropdown-submenu text-center">
-                <a class="dropdown-item dropdown-toggle" href="#"><iconify-icon inline
-                    icon="mdi:language-php"></iconify-icon> PHP</a>
-                <ul class="dropdown-menu text-center">
-                  <li><a class="dropdown-item" href="basicphp.html">Basic PHP</a></li>
-                  <li><a class="dropdown-item" href="varphp.html">Variabel</a></li>
-                </ul>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Projek
-            </a>
-            <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="https://nurispedia.relaxstand.repl.co">Nurispedia</a></li>
-              <li><a class="dropdown-item" href="project/index.html">Project Review</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <div id="tampil" class="nav-link"></div>
-      </div>
-      </li>
-      </ul>
-    </div>
-    </div>
-  </nav>
+                <div class="ms-auto">
+                    <input type="checkbox" class="btn-check" id="darkSwitch" checked autocomplete="off">
+                    <label class="btn btn-dark btn-sm rounded-5" for="darkSwitch" data-aos-duration="2000"
+                        data-aos="fade-in"><iconify-icon id="darkmode"></iconify-icon></label>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
 
   <div class="modal" id="myModal">
     <div class="modal-dialog">
@@ -171,34 +142,28 @@
           <span id="weather-info">Cerah, 26°C</span> <!-- Informasi cuaca -->
         </div>
       </div>
-      <div class="container text-center mt-3">
-        <input type="checkbox" class="btn-check" id="darkSwitch" checked autocomplete="off">
-        <label class="btn btn-dark btn-sm rounded-5" for="darkSwitch" data-aos-duration="2000"
-          data-aos="fade-in"><iconify-icon id="darkmode"></iconify-icon></label>
-      </div>
     </div>
   </div>
 
   <div>
     <div class="container mt-5">
-      <h2 class="fw-bold text-center">Windows Tools</h2>
+      <h2 class="fw-bold text-center"><iconify-icon inline
+                        icon="mage:microsoft-windows"></iconify-icon> Windows Tools</h2>
     </div>
     <div class="container text-center">
-      <h4 class="fw-bold">Media Creation Tools (MCT)</h4>
+      <h4 class="fw-bold">Media Creation Tools</h4>
       <sup class="text-success">*for installation Windows 10 or 11</sup>
       <br><code class="fira-code">Original Microsoft</code>
       <h5 class="mt-3"><a class="link-none animasi rounded-5"
-          href="https://github.com/AveYo/MediaCreationTool.bat">Windows 11 (NO TPM i guess)</a></h5>
+          href="https://www.microsoft.com/en-us/software-download/windows11">Windows 11</a></h5>
       <h5><a class="link-none animasi rounded-5"
           href="https://www.microsoft.com/en-us/software-download/windows10">Windows 10</a></h5>
       <br><code class="fira-code">Lite Version</code>
-      <h4>Ghost Spectre</h4>
-      <h5><a href="https://pixeldrain.com/u/hKktymeC" class="link-none rounded-5 animasi">Windows 11 AIO</a></h5>
+      <h5><a href="https://pixeldrain.com/u/hKktymeC" class="link-none rounded-5 animasi">Ghost Spectre,  Windows 11 AIO</a></h5>
       <h5><a href="https://atlasos.net" class="link-none rounded-5 animasi">Atlas OS AIO</a></h5>
       <br><code class="fira-code">Office 365, 2021, 2019, & 2016</code>
-      <h4>Microsoft Office</h4>
-      <h5><a href="https://gravesoft.dev/office_c2r_links" class="link-none rounded-5 animasi">C2R Installer</a></h5>
-      <code class="fira-code">*Copy and paste on powershell as admin</code>
+      <h5><a href="https://gravesoft.dev/office_c2r_links" class="link-none rounded-5 animasi">Office C2R Installer</a></h5>
+      <code class="fira-code">*Copy and paste on powershell as admin to activate</code>
       <pre class="text-center"><code class="language-shell">irm https://get.activated.win | iex
 </code></pre>
     </div>
@@ -339,7 +304,7 @@
       else if (hrs >= 20 && hrs <= 24)
         greet = 'Selamat Malam';
 
-      if (name.toLowerCase().includes("aina") || name.toLowerCase().includes("ida") || name.toLowerCase().includes("embul") || name.toLowerCase().includes("yasa")) {
+      if (name.toLowerCase().includes("aina") || name.toLowerCase().includes("ida") || name.toLowerCase().includes("embul") || name.toLowerCase().includes("yasa") | name.toLowerCase().includes("mamat")) {
         name = "Sayanggg ^•^ ";
       }
 
