--- a/tije.html
+++ b/tije.html
@@ -5,86 +5,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transjakarta Koridor</title>
-    <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="js/theme.js"></script>
+    <link rel="stylesheet" href="css/dark-mode.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Manrope&display=swap');
-
         body {
-            font-family: 'PT Sans Narrow', sans-serif !important;
-            font-weight: 700;
-            letter-spacing: 1.1px;
+            font-family: 'PT Sans Narrow', sans-serif;
+            background-color: #f8f9fa;
         }
 
-        .pt-sans-narrow-bold {
-            font-family: "PT Sans Narrow", sans-serif;
+        .title {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-top: 1rem;
+        }
+
+        .rounded-input {
+            border-radius: 1rem;
+            padding: 0.75rem 1.25rem;
+        }
+        
+        .section-box {
+            padding: 1.5rem;
+            border-radius: 1.5rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+            margin-bottom: 2rem;
+        }
+
+        .form-label {
             font-weight: 700;
-            font-style: normal;
+        }
+
+        #hasilRute, #searchResults, #koridorResults {
+            margin-top: 1rem;
         }
     </style>
 </head>
 
-<body class="container mt-4">
-    <div class="container text-center mt-3">
+<body class="container py-4">
+    <div class="text-end mb-3">
         <input type="checkbox" class="btn-check" id="darkSwitch" checked autocomplete="off">
-        <label class="btn btn-dark btn-sm rounded-5" for="darkSwitch" data-aos-duration="2000"
-            data-aos="fade-in"><iconify-icon id="darkmode"></iconify-icon></label>
+        <label class="btn btn-dark btn-sm rounded-pill" for="darkSwitch">
+            <iconify-icon id="darkmode"></iconify-icon>
+        </label>
     </div>
-    <center>
 
-        <img class="mb-2" src="image/tije.png" width="250px" alt="Logo Transjakarta & JakLingko">
-        <h2 class="mb-3 fw-bold">Transjakarta Route</h2>
-        <marquee>Silahkan klik nama halte untuk mengetahui lokasi halte tersebut di Google Maps</marquee>
-    </center>
+    <div class="text-center mb-4">
+        <img src="image/tije.png" width="200" alt="Logo Transjakarta & JakLingko">
+        <h2 class="title">Transjakarta Route Finder</h2>
+        <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+            <span id="liveClock" class="fw-bold" style="min-width:70px"></span>
+            <marquee class="text-muted small flex-grow-1">Klik nama halte untuk mengetahui lokasi halte di Google Maps</marquee>
+        </div>
+    </div>
 
-    <div class="mb-3">
-        <label for="searchServiceKoridor" class="form-label">Cari Layanan dan Koridor:</label>
-        <input type="text" id="searchServiceKoridor" class="form-control" placeholder="Ketik layanan atau koridor">
+    <div class="section-box bg-light">
+        <h3 class="fw-bold text-center">Mau pergi kemana?</h3>
+        <div class="row g-3 mt-2">
+            <div class="col-md-6">
+                <input type="text" id="halteAsalInput" class="form-control rounded-input" placeholder="Masukin halte awal kamu" list="halteList">
+            </div>
+            <div class="col-md-6">
+                <input type="text" id="halteTujuanInput" class="form-control rounded-input" placeholder="Masukin halte tujuan kamu" list="halteList">
+                <datalist id="halteList"></datalist>
+            </div>
+            <div class="col-12">
+                <button id="cariRuteBtn" class="btn btn-outline-dark rounded-5 w-100">Cari Rute</button>
+            </div>
+        </div>
+        <div id="hasilRute" class="mt-3"></div>
+    </div>
+
+    <h3 class="text-center fw-bold my-3">Pilihan Layanan Transajakarta</h3>
+
+    <div class="section-box bg-light">
+        <label for="searchServiceKoridor" class="form-label">Pencarian Layanan dan Koridor</label>
+        <input type="text" id="searchServiceKoridor" class="form-control rounded-input" placeholder="Ketik layanan atau koridor">
         <ul id="autocompleteResults" class="list-group mt-2"></ul>
-
     </div>
 
-    <div class="mb-3">
-        <label for="serviceSelect" class="form-label">Layanan</label>
-        <select id="serviceSelect" class="form-select">
-            <option value="">Pilih Layanan</option>
-            <option value="BRT">BRT (Bus Rapid Transit)</option>
-            <option value="Non-BRT">Non-BRT (Bus Pengumpan)</option>
-        </select>
+    <div class="section-box bg-light">
+        <div class="row g-3">
+            <div class="col-md-6">
+                <label for="serviceSelect" class="form-label">Layanan</label>
+                <select id="serviceSelect" class="form-select rounded-input">
+                    <option value="">Pilih Layanan</option>
+                    <option value="BRT">BRT (Bus Rapid Transit)</option>
+                    <option value="Non-BRT">Non-BRT (Bus Pengumpan)</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="koridorSelect" class="form-label">Koridor</label>
+                <select id="koridorSelect" class="form-select rounded-input"></select>
+            </div>
+        </div>
     </div>
 
-    <div class="mb-3">
-        <label for="koridorSelect" class="form-label rounded-5">Koridor</label>
-        <select id="koridorSelect" class="form-select">
-            <option value="">Pilih Koridor</option>
-        </select>
-    </div>
-
-
-    <div class="mb-3">
+    <div class="section-box bg-light">
         <label for="searchInput" class="form-label">Cari Halte:</label>
-        <input type="text" id="searchInput" class="form-control" placeholder="Masukkan nama halte">
+        <input type="text" id="searchInput" class="form-control rounded-input" placeholder="Masukkan nama halte">
+
+        <div class="text-center mt-4">
+            <h5>Hasil Pencarian:</h5>
+            <ul id="searchResults" class="list-group fw-bold"></ul>
+
+            <h5 class="mt-4">Daftar Halte:</h5>
+            <h3 id="jurusan"></h3>
+            <ul id="koridorResults" class="list-group fw-bold"></ul>
+        </div>
     </div>
 
-    <div class="container mb-3 text-center">
-        <h4>Hasil Pencarian:</h4>
-        <ul id="searchResults" class="list-group mb-3 fw-bold"></ul>
-
-        <h4>Daftar Halte :</h4>
-        <h3 id="jurusan" class="text-center"></h3>
-        <ul id="koridorResults" class="list-group fw-bold"></ul>
+    <div class="text-center mt-4">
+        <a href="index.html" class="btn btn-outline-secondary btn-custom">Kembali ke Beranda</a>
     </div>
 
-    <div class="container text-center mt-3">
-        <a href="index.html" class="btn btn-outline-dark rounded-5">Kembali ke Beranda</a>
+    <div class="text-center mt-5">
+        <img id="light" alt="logo muhfhri">
     </div>
-    <center>
-        <img id="light" class="mt-5" alt="logo muhfhri">
-    </center>
 
     <script src="js/tije.js"></script>
     <script src="js/dark-mode-switch.js"></script>
