--- a/windows.html
+++ b/windows.html
@@ -168,6 +168,10 @@
 </code></pre>
     </div>
 
+    <div class="container text-center mt-5">
+      <a href="index" class="btn btn-outline-dark rounded-5">Kembali</a>
+    </div>
+
   </div>
 
   <!-- Footer Start -->
