--- a/tije.html
+++ b/tije.html
@@ -109,8 +109,8 @@
     <div class="section-box bg-light">
         <label for="searchInput" class="form-label">Cari Halte:</label>
         <div class="mb-2 small text-muted">
-            <span class="text-muted fw-bold">Sedikit Panduan</span><br>
-            <span class="badge bg-primary me-1 mb-1 mt-1" style="width:24px;height:24px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;">2</span>
+            <span class="text-muted fw-bold">Sedikit Panduan</span>
+            <span class="badge bg-primary me-1 mb-1" style="width:24px;height:24px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;">2</span>
             <span class="badge bg-primary me-1 mb-1" style="width:24px;height:24px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;">11</span> <b>Galur</b>
             <span class="me-2"></span>
             <br><span class="badge bg-primary me-1 mb-1" style="width:24px;height:24px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;">2</span> = Koridor 2
@@ -135,9 +135,10 @@
     <div class="container text-center mt-5">
         <img id="light">
     </div>
-
+    
     <script src="js/tije.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
     <script src="js/dark-mode-switch.js"></script>
 </body>
 
