--- a/tije.html
+++ b/tije.html
@@ -108,11 +108,13 @@
         <h2 class="fw-bold">Connecting the Life of Jakarta</h2>
         <h2 class="fw-bold">#INTEGRASI</h2>
         <h2 class="fw-bold">#KINILEBIHBAIK</h2>
-        <h2 class="fw-bold">Smart Mobility for Smart City</h2>
+        <h2 class="fw-bold">SMART Mobility for Smart City</h2>
         <h2 class="fw-bold">PT Transportasi Jakarta</h2>
         <h2 class="fw-bold">JakLingko Indonesia</h2>
         <h2 class="fw-bold">#MenemaniPerjalanan</h2>
         <h2 class="fw-bold">Dibuat Oleh <img id="light" class="img-fluid" width="70"></h2>
+        <h2 class="fw-bold">100% Data halte berasal dari Map Transjakarta</h2>
+        <h2 class="fw-bold">Data Integrasi masih bersifat eksperimental</h2>
     </div>
 
     <div class="section-box bg-light">
@@ -189,10 +191,10 @@
     </center>
     <div class="container text-center text-muted mt-5">
         <h5 class="fw-bold">Sumber Informasi</h5>
-        <a href="https://transjakarta.co.id/" class="link-none">Transjakarta</a> |
-        <a href="https://jaklingko.id/" class="link-none">JakLingko</a> |
-        <a href="wikipedia.org" class="link-none">Wikipedia</a> |
-        <a href="maps.google.com" class="link-none">Google Maps</a>
+        <a href="https://transjakarta.co.id/" class="link-none text-muted">Transjakarta</a> |
+        <a href="https://jaklingkoindonesia.co.id/" class="link-none text-muted">JakLingko</a> |
+        <a href="https://wikipedia.org" class="link-none text-muted">Wikipedia</a> |
+        <a href="https://maps.google.com" class="link-none text-muted">Google Maps</a>
     </div>
     
     <div class="footer mt-2">
