--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </p>
             <h4 class="fw-bold">Projek <iconify-icon inline icon="simple-icons:polymerproject"></iconify-icon></h4>
             <p>
-                <a href="tije" class="rounded-5 link-none animasi">Tije</a> |
+                <a href="tije.html" class="rounded-5 link-none animasi">Tije</a> |
                 <a href="https://flixdz.github.io/flixpseal/project/" class="rounded-5 link-none animasi">Project
                     Review</a></h5>
             </p>
